--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "homepage": "https://github.com/CroudSupport/vue-fullcalendar#readme",
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
-    "fullcalendar": "^3.4.0",
+    "moment": "^2.22.2",
+    "moment-jalaali": "^0.8.1",
     "lodash.defaultsdeep": "^4.6.0"
   },
   "devDependencies": {
